- added possibility to use GUBs for lifting knapsack cuts (disabled)
- added statistics on the number of cuts/rows that have actually been applied to the lp for each constraint handler and separator;
  use SCIPcreate(Empty)RowCons() and SCIPcreate(Empty)RowSepa() to support the statistics.
- implemented first clique lifting procedure in cons_setppc.c (by default is off)

Makefile
- CppAD source code is now distributed with SCIP (src/cppad), so that lib/cppad is not used anymore;
  the default for EXPRINT has changed from none to cppad

SCIP version 2.1.2
==================

fixed bugs:
- fixed bug in SCIPsolveKnapsackExactly()
- fixed bug in varAddTransitiveImplic() in var.c, when adding implications on special aggregated, namely negated,
  variables
- fixed bug in cons_quadratic where bounds on activity of quadratic term were not always invalidated when quadratic
  variables were removed
- fixed bug in heur_undercover.c, where a variable with fixed bounds but not of status SCIP_VARSTATUS_FIXED was wrongly
  handled
- fixed bug in cons.c, where after a restart the arrays for all initial constraints were corrected in the initsol
  process instead of the initpre process, this was to late because you might change the status in presolving which lead
  to an assert()
- fixed issue if a primal solution leads to a cutoff of the current focus node
- fix compilation issues with zlib 1.2.6
- fixed bug in NLP representation of abspower constraints handling (x+a)^2 with nonzero a
- fixed bug parsing an and-constraint in cip format
- fixed bug in cons_setppc, did not handle new constraints with inactive variables
- fixed bug in heur_oneopt.c which forgot to check LP rows if local rows are present
- fixed bug in SCIPsolveKnapsackExactly(), trying to allocate too much memory which led to an overflow and later to a
  segmentation fault
- fixed bug in cons_xor.c which did not copy the artificial integer variable (used for the lp relaxation)